syntax = "proto3";
package rpc;
option go_package = "rpc";

message ChannelMessage {
    string channel = 1;
    string message = 2;
}

message RawMessage {
    string message = 1;
}

message Error {
    string message = 1;
}

service IRCPlugin {
    rpc sendChannelMesssage(ChannelMessage) returns (Error) {};
    rpc sendRawMessage(RawMessage) returns (Error) {};
}


